// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 1`] = `
<Slider
  crossThumbs={false}
  decimals={2}
  max={10}
  min={1}
  minDistance={10}
  minRange={1}
  multiple={true}
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span>
      <span />
    </span>
    <span
      key="min"
      name="min"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-min"
      type="hidden"
      value={
        Object {
          "input": undefined,
          "position": 0,
          "range": 1,
          "value": NaN,
        }
      }
    />
    <span
      key="max"
      name="max"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "100%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-max"
      type="hidden"
      value={
        Object {
          "input": undefined,
          "position": 100,
          "range": 10,
          "value": NaN,
        }
      }
    />
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for decimals and steps specified 2`] = `
<Slider
  crossThumbs={false}
  decimals={2}
  max={10}
  min={1}
  minDistance={10}
  minRange={1}
  multiple={true}
  name={
    Array [
      "pe",
      "ps",
    ]
  }
  prefix=""
  step={0.5}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span>
      <span />
    </span>
    <span
      key="min"
      name="min"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-min"
      name="pe"
      type="hidden"
      value={
        Object {
          "input": "pe",
          "position": 0,
          "range": 1,
          "value": NaN,
        }
      }
    />
    <span
      key="max"
      name="max"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "100%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-max"
      name="ps"
      type="hidden"
      value={
        Object {
          "input": "ps",
          "position": 100,
          "range": 10,
          "value": NaN,
        }
      }
    />
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for multiple thumbs 1`] = `
<Slider
  crossThumbs={false}
  max={1500}
  min={500}
  minDistance={10}
  minRange={100}
  multiple={true}
  prefix=""
  step={250}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span>
      <span />
    </span>
    <span
      key="min"
      name="min"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-min"
      type="hidden"
      value={
        Object {
          "input": undefined,
          "position": 0,
          "range": 500,
          "value": NaN,
        }
      }
    />
    <span
      key="max"
      name="max"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "100%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-max"
      type="hidden"
      value={
        Object {
          "input": undefined,
          "position": 100,
          "range": 1500,
          "value": NaN,
        }
      }
    />
  </span>
</Slider>
`;

exports[`(Component) Slider snapshots should create the right snapshot for single thumb 1`] = `
<Slider
  crossThumbs={false}
  max={1500}
  min={500}
  minDistance={10}
  minRange={100}
  prefix=""
  step={250}
  suffix=""
  template=""
  values={Array []}
>
  <span>
    <span>
      <span />
    </span>
    <span
      key="min"
      name="min"
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
      tabIndex={1}
    />
    <input
      key="hidden-min"
      type="hidden"
      value={
        Object {
          "input": undefined,
          "position": 0,
          "range": 500,
          "value": NaN,
        }
      }
    />
  </span>
</Slider>
`;
